# GesCom

./: .env.example  .gitignore  Dockerfile  GesCom.sh  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: config.py  database.py  main.py
app/api/v1/: __init__.py  articles.py  clients.py  commandes.py  factures.py  livraisons.py  reporting.py  stock.py  vrp.py
app/auth/: dependencies.py  router.py  schemas.py  service.py
app/models/: __init__.py  article.py  client.py  commande.py  facture.py  fournisseur.py  livraison.py  stock.py  transport.py  user.py  vrp.py
app/schemas/: article.py  client.py  commande.py  common.py  facture.py  livraison.py  stock.py  vrp.py
app/services/: article_service.py  client_service.py  commande_service.py  export_service.py  facture_service.py  livraison_service.py  reporting_service.py  stock_service.py  vrp_service.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Articles.jsx  Clients.jsx  Commandes.jsx  Dashboard.jsx  Factures.jsx  Login.jsx
frontend/src/services/: api.js
scripts/: migrate_hyperfile.py  seed_data.py
tests/: conftest.py  test_health.py
tests/api/: test_articles.py  test_clients.py  test_commandes.py  test_factures.py  test_reporting.py  test_stock.py  test_vrp.py
